# PIIREDACT

./: .gitignore  railway.toml
presidio-audio-redactor/: README.md  app.py  entrypoint.sh  logging.ini  pyproject.toml
presidio-audio-redactor/presidio_audio_redactor/: __init__.py  audio_redactor.py
presidio-audio-redactor/tests/: __init__.py  conftest.py  test_app.py  test_audio_redactor.py
sales-call-analyzer/: Dockerfile  PERFORMANCE_OPTIMIZATION.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_IMPLEMENTATION.md  api_v1.py  app.py  config.py  env.example  requirements.txt  tasks.py  whitelist.json
sales-call-analyzer/presidio_audio_redactor/: __init__.py  audio_redactor.py
sales-call-analyzer/services/: __init__.py  analytics.py  analyzer.py  annotations.py  background_processor.py  benchmark.py  comparison.py  conversation_intelligence.py  database.py  elevenlabs_webhook.py  email_sender.py  exporter.py  keyword_tracking.py  logging_security.py  pdf_generator.py  playlists.py  scoring.py  secure_storage.py  transcriber.py
sales-call-analyzer/static/: style.css
sales-call-analyzer/templates/: agents.html  api_keys.html  base.html  compare.html  dashboard.html  error.html  history.html  keyword_library_form.html  keywords.html  login.html  pii_redaction.html  playlist_form.html  playlist_view.html  playlists.html  processing.html  report.html  rubric_form.html  rubrics.html  team.html  transcript.html  upload.html  webhook_status.html  webhooks.html
