[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "presidio-audio-redactor"
version = "0.1.0"
description = "PII redaction for audio transcripts using Presidio and Whisper"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["presidio", "pii", "audio", "redaction", "whisper", "transcription"]
dependencies = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "openai-whisper>=20231117",
]

[project.urls]
Homepage = "https://github.com/Microsoft/presidio"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "ruff>=0.1.0",
]
server = [
    "flask>=2.0",
    "gunicorn>=21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["presidio_audio_redactor"]
omit = ["tests/*"]

[tool.ruff]
line-length = 100
target-version = "py39"
